# hometube

./: Dockerfile  Makefile  pyproject.toml
app/: config.py  domain_utils.py  download_auth.py  download_execution_plan.py  download_runtime_state.py  extension_bundle.py  file_system_utils.py  job_command_runner.py  job_download_config.py  job_models.py  job_progress.py  job_runtime.py  job_scheduler.py  job_store.py  job_submission.py  job_video_handler.py  job_worker.py  job_worker_entry.py  logs_utils.py  main.py  notifications.py  playlist_entry_expansion.py  playlist_entry_target.py  playlist_sync.py  playlist_utils.py  site_cookies.py  text_utils.py  video_cache_backend.py  video_codec_inspection.py  video_codec_normalization.py  video_download_backend.py  video_download_service.py  video_file_ops.py  video_postprocess_backend.py  video_workspace_backend.py  workspace.py
app/translations/: __init__.py  en.py  fr.py  zh.py
browser-extension/hometube-cookie-export/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
docs/: contributing.md  deployment.md  installation.md
docs/plans/: 2026-04-27-background-jobs-design.md  2026-04-27-background-jobs-phase-1-plan.md  2026-04-27-site-cookies-paste-import.md  2026-04-28-video-codec-normalization-design.md  2026-04-28-video-codec-normalization-plan.md  2026-04-29-code-review-fix-tasks.md  (+2 more)
requirements/: requirements-dev.txt  requirements.txt
scripts/: reencode_media_library.py  test_command_generation.py  update-requirements.sh
tests/: test_config.py  test_core_functions.py  test_download_auth.py  test_download_execution_plan.py  test_download_runtime_state.py  test_file_operations.py  test_job_command_runner.py  test_job_download_config.py  test_job_progress.py  test_job_runtime.py  test_job_scheduler.py  test_job_store.py  test_job_submission.py  test_job_video_handler.py  test_job_worker.py  test_job_worker_entry.py  test_logs_runtime_state.py  test_notifications.py  test_playlist_entry_expansion.py  test_playlist_sync.py  test_playlist_utils.py  test_reencode_media_library.py  test_repo_hygiene.py  test_site_cookies.py  test_streamlit_runtime_packaging.py  test_text_utils.py  test_translations.py  test_unique_folder_naming.py  test_video_cache_backend.py  test_video_codec_inspection.py  test_video_codec_normalization.py  test_video_download_backend.py  test_video_download_service.py  test_video_file_ops.py  test_video_postprocess_backend.py  test_video_workspace_backend.py  test_workspace.py
