[project]
name = "hometube"
version = "2.9.1"
description = "HomeTube development workspace"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.49,<1.51",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
local = [
    "yt-dlp>=2026.3.17",
]

docker = [
    "streamlit>=1.49,<1.51",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
]

test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]

dev = [
    "black==26.1.0",
    "ruff==0.14.13",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=80.8.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*", "tmp*", "cookies*", "downloads*", "htmlcov*"]

[tool.uv]
# Install dev dependencies by default for development workflow
# Make uv aware to install dev extras when syncing (for local development)
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "black==26.1.0",
    "ruff==0.14.13",
    "watchdog>=6.0.0",
    "yt-dlp>=2026.3.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers","--strict-config","--verbose","--tb=short"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "network: Tests requiring network access",
    "external: Tests requiring external tools (yt-dlp, ffmpeg, etc.)",
    "performance: Performance tests",
    "stress: Stress tests",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | tmp
    | downloads
    | cookies
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*","*/test_*","*/__pycache__/*","*/venv/*","*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
